--- a/styles/media.css
+++ b/styles/media.css
@@ -605,9 +605,16 @@
     .title-part_left-side_desktop {
         position: absolute;
         z-index: 200;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         bottom: -222px;
         left: 0;
         width: 100%;
